Contacts are now optional.

--- a/src/main/resources/mgnl-i18n/app-tricode-blogs-messages_en.properties
+++ b/src/main/resources/mgnl-i18n/app-tricode-blogs-messages_en.properties
@@ -67,6 +67,8 @@ magnolia-blogs-module.importWordpressBlog.import.password.label = Password
 magnolia-blogs-module.importWordpressBlog.import.blogID.label = Blog ID
 magnolia-blogs-module.importWordpressBlog.import.shouldImportImages.label = Import images
 magnolia-blogs-module.importWordpressBlog.import.shouldImportImages.buttonLabel =
+magnolia-blogs-module.importWordpressBlog.import.shouldImportContacts.label= Import contacts
+magnolia-blogs-module.importWordpressBlog.import.shouldImportContacts.buttonLabel=
 magnolia-blogs-module.importWordpressBlog.import.endpoint.description = For example http://mywordpress.com/xmlrpc.php.
 magnolia-blogs-module.importWordpressBlog.import.username.description = Your WordPress username.
 magnolia-blogs-module.importWordpressBlog.import.password.description = Your WordPress password.
