Contacts are now optional.

--- a/src/main/resources/mgnl-i18n/app-tricode-blogs-messages_en.properties
+++ b/src/main/resources/mgnl-i18n/app-tricode-blogs-messages_en.properties
@@ -67,12 +67,9 @@ magnolia-blogs-module.importWordpressBlog.import.password.label = Password
 magnolia-blogs-module.importWordpressBlog.import.blogID.label = Blog ID
 magnolia-blogs-module.importWordpressBlog.import.shouldImportImages.label = Import images
 magnolia-blogs-module.importWordpressBlog.import.shouldImportImages.buttonLabel =
-magnolia-blogs-module.importWordpressBlog.import.shouldImportContacts.label= Import contacts
-magnolia-blogs-module.importWordpressBlog.import.shouldImportContacts.buttonLabel=
 magnolia-blogs-module.importWordpressBlog.import.endpoint.description = For example http://mywordpress.com/xmlrpc.php.
 magnolia-blogs-module.importWordpressBlog.import.username.description = Your WordPress username.
 magnolia-blogs-module.importWordpressBlog.import.password.description = Your WordPress password.
 magnolia-blogs-module.importWordpressBlog.import.blogID.description = The Blog ID of the blog to import. Enter 1 if you don't have multisite.
 magnolia-blogs-module.importWordpressBlog.import.shouldImportImages.description = If selected, will import the WordPress images displayed in the blog posts. This will also update the image references in your blog posts.
-
-tricode-blogs.importWordpressBlog.import.blogID.errorMessage=Please enter a valid number11.
+magnolia-blogs-module.importWordpressBlog.import.blogID.errorMessage = Please enter a valid number.
