Fix error message.

--- a/src/main/resources/mgnl-i18n/app-tricode-blogs-messages_en.properties
+++ b/src/main/resources/mgnl-i18n/app-tricode-blogs-messages_en.properties
@@ -74,4 +74,5 @@ magnolia-blogs-module.importWordpressBlog.import.username.description = Your Wor
 magnolia-blogs-module.importWordpressBlog.import.password.description = Your WordPress password.
 magnolia-blogs-module.importWordpressBlog.import.blogID.description = The Blog ID of the blog to import. Enter 1 if you don't have multisite.
 magnolia-blogs-module.importWordpressBlog.import.shouldImportImages.description = If selected, will import the WordPress images displayed in the blog posts. This will also update the image references in your blog posts.
-magnolia-blogs-module.importWordpressBlog.import.blogID.errorMessage = Please enter a valid number.
+
+tricode-blogs.importWordpressBlog.import.blogID.errorMessage=Please enter a valid number11.
